--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Vivecraft-Spigot-Extensions
-version: '1.20.1-2'
-api-version: '1.20'
+version: '${version}'
+api-version: '${api_version}'
 main: org.vivecraft.VSE
 website: http://www.vivecraft.org/
 author: jrbudda, jaron780
